--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "save metadata associated with photo uploads",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main",
+    "dev": "nodemon main",
+    "knex": "knex",
+    "refresh": "dropdb rawls-test && createdb rawls-test",
+    "reseed": "knex migrate:latest && knex seed:run"
   },
   "author": "Nathan Daniel Peterson",
   "license": "ISC",
@@ -13,6 +17,10 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "knex": "^0.15.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.4.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
