--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "graphql-yoga": "^1.16.2",
     "knex": "^0.15.2",
+    "merge-graphql-schemas": "^1.5.7",
     "morgan": "^1.9.1",
     "pg": "^7.4.3"
   },
