--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Nathan Daniel Peterson",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "graphql-yoga": "^1.16.2",
+    "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
     "merge-graphql-schemas": "^1.5.7",
     "morgan": "^1.9.1",
