--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "knex": "^0.15.2",
     "merge-graphql-schemas": "^1.5.7",
     "morgan": "^1.9.1",
+    "nodemailer": "^4.6.8",
     "pg": "^7.4.3"
   },
   "devDependencies": {
