--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
